tweaked book page and fixed homepage links

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang='en'>
+
 <head>
     <meta charset='UTF-8'>
     <meta name='author' content='Liam Stockton'>
@@ -20,77 +21,90 @@
     <link href="https://fonts.googleapis.com/css2?family=ZCOOL+QingKe+HuangYou&display=swap" rel="stylesheet">
 </head>
 
-    <body>
-        <section class="navbar">
-            <nav>
-                <ul>
-                    <li class="navbuttons"><a href="index.html">
+<body>
+    <section class="navbar">
+        <nav>
+            <ul>
+                <li class="navbuttons"><a href="index.html">
                         <span class="icon"><img class="awesome" src="Images/Home.png" alt=""></span>
                         <span class="name">Home</span>
                     </a></li>
-                    <li class="navbuttons"><a href="booking/book.html">
+                <li class="navbuttons"><a href="booking/book.html">
                         <span class="icon"><img class="awesome" src="Images/book.png" alt=""></span>
                         <span class="name">Book</span>
                     </a></li>
-                    <li class="navbuttons"><a href="services/services.html">
+                <li class="navbuttons"><a href="services/services.html">
                         <span class="icon"><img class="awesome" src="Images/services.png" alt=""></span>
                         <span class="name">Services</span>
                     </a></li>
-                    <li class="navbuttons"><a href="contact/contact.html">
+                <li class="navbuttons"><a href="contact/contact.html">
                         <span class="icon"><img class="awesome" src="Images/Contact.png" alt=""></span>
                         <span class="name">Contact</span>
                     </a></li>
-                </ul>
-            </nav>
-        </section>
-        <div class="topPage">
-            <div class="background"></div>
-            <img class="logo" src="Images/icon1.png" alt="" id="logo">
-        </div>
+            </ul>
+        </nav>
+    </section>
+    <div class="topPage">
+        <div class="background"></div>
+        <img class="logo" src="Images/icon1.png" alt="" id="logo">
+    </div>
 
-        <section class="home">
-            <div class="homepage">
-                <div class="welcome-text">
-                    <h2 id="welcome-heading">Welcome to Espada</h2>
-                    <p>“We are the modern Samurai”</p>
-                    <div class="box-wrap">
-                        <div class="box-1">
-                            <img class="book-img" src="images/book.png" alt="">
-                            <h3 id="box-header">Booking</h3>
-                            <p class="box-1-text">On our Booking page you can view an estimated price and ad on's calculated onto a form. From there you may send a message to Espada's Service Department where they will process your order and send an estimate. They may have additional processing fee's and cost for meetings. Check out the booking page for more information!</p>
-                            <div class="order-button">
-                                <a href="../booking/book.html"><button type="button">BOOK</button></a>
-                            </div>
-                        </div>
-                        <div class="box-1">
-                            <img class="book-img" src="images/services.png" alt="">
-                            <h3 id="box-header">Services</h3>
-                            <p style="padding-bottom: 35px;" class="box-1-text">View Espada's many service packages that we offer! Premium Packages including Silver, Gold, and Platnium with additional ad on's that are optional. Click the button below to view more details and specifacations about our services</p>
-                            <div class="order-button">
-                                <a href="../booking/book.html"><button id="wide-button" type="button">SERVICES</button></a>
-                            </div>
+    <section class="home">
+        <div class="homepage">
+            <div class="welcome-text">
+                <h2 id="welcome-heading">Welcome to Espada</h2>
+                <p>“We are the modern Samurai”</p>
+                <div class="box-wrap">
+                    <div class="box-1">
+                        <img class="book-img" src="Images/book.png" alt="">
+                        <h3 id="box-header">Booking</h3>
+                        <p class="box-1-text">On our Booking page you can view an estimated price and ad on's calculated
+                            onto a form. From there you may send a message to Espada's Service Department where they
+                            will process your order and send an estimate. They may have additional processing fee's and
+                            cost for meetings. Check out the booking page for more information!</p>
+                        <div class="order-button">
+                            <a href="booking/book.html"><button type="button">BOOK</button></a>
                         </div>
                     </div>
-                    <div class="about">
-                        <h3 style="margin-top: 5px;" id="box-header">About</h3>
-                        <p id="about-text">Espada was founded in Tucson Arizona in 1981 and has been proudly serving the state of Arizona ever since, we offer scalable security solutions for our clients and offer highly trained bodyguards for high profile individuals. Unique to Espada is that we have specialized  bodyguards that are duel trained in other professions (Butlers, Chauffeurs, and Emergency Medical Technicians) to give you a seamless and non intrusive integration of security into your life. We also have self defence training classes for those who prefer to have a more direct control over their safety.</p>
+                    <div class="box-1">
+                        <img class="book-img" src="Images/services.png" alt="">
+                        <h3 id="box-header">Services</h3>
+                        <p style="padding-bottom: 35px;" class="box-1-text">View Espada's many service packages that we
+                            offer! Premium Packages including Silver, Gold, and Platnium with additional ad on's that
+                            are optional. Click the button below to view more details and specifacations about our
+                            services</p>
+                        <div class="order-button">
+                            <a href="booking/book.html"><button id="wide-button" type="button">SERVICES</button></a>
+                        </div>
                     </div>
                 </div>
+                <div class="about">
+                    <h3 style="margin-top: 5px;" id="box-header">About</h3>
+                    <p id="about-text">Espada was founded in Tucson Arizona in 1981 and has been proudly serving the
+                        state of Arizona ever since, we offer scalable security solutions for our clients and offer
+                        highly trained bodyguards for high profile individuals. Unique to Espada is that we have
+                        specialized bodyguards that are duel trained in other professions (Butlers, Chauffeurs, and
+                        Emergency Medical Technicians) to give you a seamless and non intrusive integration of security
+                        into your life. We also have self defence training classes for those who prefer to have a more
+                        direct control over their safety.</p>
+                </div>
             </div>
-        </section>
-    
-    </body>
-    <footer>
-        <div class="footer">
-            <ul class="footer-items">
-                <li><a href="index.html"><img src="Images/icon1.png" alt=""></a></li>
-                <li class="items"><a href="index.html">Home</a></li>
-                <li class="items"><a href="booking/book.html">Book</a></li>
-                <li class="items"><a href="services/services.html">Services</a></li>
-                <li class="items"><a href="contact/contact.html">Contact</a></li>
-                <p class="items">6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
-                <p class="items">(480)-987-654</p>
-            </ul>
         </div>
-    </footer>
+    </section>
+
+</body>
+<footer>
+    <div class="footer">
+        <ul class="footer-items">
+            <li><a href="index.html"><img src="Images/icon1.png" alt=""></a></li>
+            <li class="items"><a href="index.html">Home</a></li>
+            <li class="items"><a href="booking/book.html">Book</a></li>
+            <li class="items"><a href="services/services.html">Services</a></li>
+            <li class="items"><a href="contact/contact.html">Contact</a></li>
+            <p class="items">6997 N Glen Harbor Blvd, Glendale, AZ 85307</p>
+            <p class="items">(480)-987-654</p>
+        </ul>
+    </div>
+</footer>
+
 </html>
