--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
                             <h3 id="box-header">Services</h3>
                             <p style="padding-bottom: 35px;" class="box-1-text">View Espada's many service packages that we offer! Premium Packages including Silver, Gold, and Platnium with additional ad on's that are optional. Click the button below to view more details and specifacations about our services</p>
                             <div class="order-button">
-                                <a href="../booking/book.html"><button id="wide-button" type="button">SERVICES</button></a>
+                                <a href="../Espada-Website/services/services.html"><button id="wide-button" type="button">SERVICES</button></a>
                             </div>
                         </div>
                     </div>
