--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
                             <h3 id="box-header">Booking</h3>
                             <p class="box-1-text">On our Booking page you can view an estimated price and ad on's calculated onto a form. From there you may send a message to Espada's Service Department where they will process your order and send an estimate. They may have additional processing fee's and cost for meetings. Check out the booking page for more information!</p>
                             <div class="order-button">
-                                <a href="../booking/book.html"><button type="button">BOOK</button></a>
+                                <a href="booking/book.html"><button type="button">BOOK</button></a>
                             </div>
                         </div>
                         <div class="box-1">
@@ -66,7 +66,7 @@
                             <h3 id="box-header">Services</h3>
                             <p style="padding-bottom: 35px;" class="box-1-text">View Espada's many service packages that we offer! Premium Packages including Silver, Gold, and Platnium with additional ad on's that are optional. Click the button below to view more details and specifacations about our services</p>
                             <div class="order-button">
-                                <a href="../Espada-Website/services/services.html"><button id="wide-button" type="button">SERVICES</button></a>
+                                <a href="services/services.html"><button id="wide-button" type="button">SERVICES</button></a>
                             </div>
                         </div>
                     </div>
